--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -489,7 +489,7 @@
 <body>
     <div class="sidebar">
         <div class="title-area">
-            <h1>SCOUNDREL:<br>GILDED DEPTHS</h1>
+            <h2>SCOUNDREL:<br>GILDED DEPTHS</h2>
         </div>
 
         <div class="stat-block" id="sidebarStats" style="display: block;">
@@ -1175,8 +1175,8 @@
                     const giftType = Math.random() > 0.5 ? 'weapon' : 'potion';
                     gifts.push({
                         suit: base.suit, val: base.val, type: 'gift',
-                        name: giftType === 'weapon' ? `Divine Blade` : `Elixir of Life`,
-                        actualGift: { suit: base.suit, val: base.val, type: giftType, name: giftType === 'weapon' ? `Divine Blade` : `Elixir of Life` }
+                        name: giftType === 'weapon' ? `Divine Weapon` : `Elixir of Life`,
+                        actualGift: { suit: base.suit, val: base.val, type: giftType, name: giftType === 'weapon' ? `Divine Weapon` : `Elixir of Life` }
                     });
                 }
 
@@ -1511,7 +1511,7 @@
                 // Ensure name doesn't already have (X) before adding it
                 const cleanName = game.weapon.name.split(' (')[0];
                 weaponLabel.innerText = `${cleanName} (${game.weapon.val})`;
-                weaponDetail.innerText = game.weaponDurability === Infinity ? "Clean Blade: No limit" : `Bloody: Next <${game.weaponDurability}`;
+                weaponDetail.innerText = game.weaponDurability === Infinity ? "Clean Weapon: No limit" : `Bloody: Next <${game.weaponDurability}`;
                 weaponLabel.style.color = 'var(--gold)';
 
                 // Update Sidebar Slot
